--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,20 @@ select = [
     "UP",  # pyupgrade (modern Python)
     "C9",  # McCabe complexity
     "N",   # naming conventions
+    "D",   # pydocstyle - ADDED FOR DOCSTRINGS
 ]
+
+# Docstring configuration
+[tool.ruff.pydocstyle]
+# Google style docstrings
+convention = "google"
+# Require docstrings for:
+#   - all modules
+#   - all functions
+#   - all classes
+#   - all methods
+#   - __init__ methods
+docstring-convention = "google"
 
 # Allow legacy/compatibility patterns
 ignore = [
@@ -89,6 +102,9 @@ warn_unused_configs = true
 disallow_incomplete_defs = true
 no_implicit_optional = true
 warn_redundant_casts = true
+disallow_untyped_defs = true  # REQUIRE type hints on all functions
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
 
 # Practical settings for data science
 ignore_missing_imports = true
@@ -114,11 +130,6 @@ min-public-methods = 1 # Classes should have ≥1 public method
 [tool.pylint.'MESSAGES CONTROL']
 # Essential checks to disable
 disable = [
-    # Documentation - required for production but optional for research
-    "missing-module-docstring",
-    "missing-class-docstring",
-    "missing-function-docstring",
-    
     # Design - these are covered by Ruff's complexity checks
     "too-many-arguments",
     "too-many-locals",
