--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -56,7 +56,7 @@ jobs:
         # --cov-report=term: Display the report in the CI logs
         # --cov-fail-under=80: Fail the step if coverage < 80%
         run: |
-          uv run pytest --cov=source \
+          uv run pytest --cov=src \
             --cov-report=term \
             --cov-report=xml:reports/quality/coverage.xml \
             --cov-fail-under=95
